[package]
name = "upstash-ratelimit"
authors = [ "Liam Kinne <liam@kinne.io>" ]
description = "Upstash ratelimit compatible rate limiting library."
categories = [ "web-programming" ]
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/upstash-ratelimit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
redis = "0.23.0"

[dev-dependencies]
lazy_static = "1.4.0"
